--- a/Phase1/AI Project 1.csproj
+++ b/Phase1/AI Project 1.csproj
@@ -43,8 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="main.cs" />
+    <Compile Include="node.cs" />
     <Compile Include="Phase1.cs" />
+    <Compile Include="Phase2.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReadCSV.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
