--- a/Phase1/AI Project 1.csproj
+++ b/Phase1/AI Project 1.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Phase2.cs" />
     <Compile Include="Phase3.cs" />
     <Compile Include="Phase4.cs" />
+    <Compile Include="Phase5.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReadCSV.cs" />
   </ItemGroup>
